near fix